# secagent

./: .gitignore  README.md  USAGE.md  install.sh  pyproject.toml
.claude/: settings.local.json
docs/: refactor_plan.md
engagements/example/: mcp.example.json  scope.yaml  sop.md
secagent/: __init__.py  llm.example.yaml  main.py
secagent/cli/: __init__.py  bootstrap.py  init_wizard.py
secagent/core/: handler.py  loop.py  outcome.py
secagent/frontends/: repl.py
secagent/llm/: anthropic_session.py  base.py  config.py  mixin.py  openai_session.py  tokens.py
secagent/mcp/: manager.py
secagent/prompts/: js_reverse_sop.md  soul.md  system_sec.md
secagent/prompts/skills/: cloudflare.md  nextjs.md  webpack_obfuscator.md
secagent/safety/: audit.py  policy.py
secagent/tools/: ask_user.py  checkpoint.py  filesystem.py  findings.py  js_analysis.py  js_format.py  plan.py  recon.py  registry.py  scope.py  shell.py  skills.py  sourcemap.py  task_complete.py  think.py
